support iterating prs

--- a/.github/workflows/tb-agent.yml
+++ b/.github/workflows/tb-agent.yml
@@ -225,8 +225,26 @@ jobs:
             echo "EOF" >> $GITHUB_OUTPUT
           fi
       
-      - name: Create Pull Request
+      - name: Commit and Push Changes
         if: steps.tb_agent.outputs.changes_made == 'true'
+        id: commit_changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          
+          if [ "${{ needs.check-mention.outputs.is_pr }}" = "true" ]; then
+            # We're in a PR - commit to the current branch
+            git add .
+            git commit -m "Update PR #${{ needs.check-mention.outputs.issue_number }}: ${{ needs.check-mention.outputs.command }}"
+            git push origin HEAD
+            echo "updated_pr=true" >> $GITHUB_OUTPUT
+          else
+            # We're in an issue - create a new PR
+            echo "updated_pr=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create Pull Request
+        if: steps.tb_agent.outputs.changes_made == 'true' && steps.commit_changes.outputs.updated_pr == 'false'
         id: create_pr
         uses: peter-evans/create-pull-request@v5
         with:
@@ -282,13 +300,22 @@ jobs:
             let message;
             
             if ('${{ steps.tb_agent.outputs.changes_made }}' === 'true') {
-              const prNumber = '${{ steps.create_pr.outputs.pull-request-number }}';
-              message = `✅ I've created PR #${prNumber} to address this issue.
-              
-              **Summary of changes:**
-              ${{ steps.tb_agent.outputs.summary }}
-              
-              The changes have been validated with Tinybird and all tests pass.`;
+              if ('${{ steps.commit_changes.outputs.updated_pr }}' === 'true') {
+                message = `✅ I've updated this PR with the requested changes.
+                
+                **Summary of changes:**
+                ${{ steps.tb_agent.outputs.summary }}
+                
+                The changes have been validated with Tinybird and all tests pass.`;
+              } else {
+                const prNumber = '${{ steps.create_pr.outputs.pull-request-number }}';
+                message = `✅ I've created PR #${prNumber} to address this issue.
+                
+                **Summary of changes:**
+                ${{ steps.tb_agent.outputs.summary }}
+                
+                The changes have been validated with Tinybird and all tests pass.`;
+              }
               
               // Add success reaction
               await github.rest.reactions.createForIssueComment({
